# pointcloud_matching

./: .gitignore  CMakeLists.txt  CloudDiffChecker.cpp  CloudDiffChecker.h  CloudProjection.cpp  CloudProjection.h  Configurations.cpp  Configurations.h  Dockerfile  FPFH.cpp  PointcloudProject.sln  PreProcessing.cpp  Projection2D.cpp  README.md  Readme.txt  ReferPlane.cpp  main.cpp  matching.cpp  matching.h  plyio.cpp  plyio.h  preprocess.cpp  preprocess.h
Matching/: Matching.vcxproj  Matching.vcxproj.filters
PreProcess/: PreProcess.vcxproj  PreProcess.vcxproj.filters
ReferPlane/: ReferPlane.vcxproj  ReferPlane.vcxproj.filters
include/pointcloud_matching/: CloudDiffChecker.h  CloudProjection.h  Configurations.h  cloud_diff_checker.hpp  cloud_projection.hpp  configurations.hpp  matching.h  matching.hpp  preprocess.h  preprocess.hpp
src/: CloudDiffChecker.cpp  CloudProjection.cpp  Configurations.cpp  ReferPlane.cpp  cloud_diff_checker.cpp  cloud_projection.cpp  configurations.cpp  matching.cpp  preprocess.cpp  refer_plane.cpp
